# Comolor-POS

./: .env  .env.example  .replit  API_DOCS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Procfile  app.py  cashier_cookies.txt  cookies.txt  database_setup.sql  deploy_production.sh  desktop_app_control.py  desktop_control_system.py  models.py  mpesa_data_flow.md  production_config.py  pyproject.toml  render-python313-requirements.txt  render-requirements.txt  render.yaml  render_deploy_guide.md  render_requirements.txt  replit.md  requirements.txt  shop_cookies.txt  test_cookies.txt  vercel-requirements.txt  vercel.json
api/: index.py
attached_assets/: Pasted--Cloning-from-https-github-com-KingComolor-Comolor-POS-Checking-out-commit-b0deccbf35d5c92-1750159607994_1750159607995.txt  Pasted--Downloading-idna-3-10-py3-none-any-whl-70-kB-Downloading-urllib3-2-4-0-py3-none-any-whl-128-kB-1750160248356_1750160248359.txt  Pasted--Search-Live-tail-GMT-3-Menu-Cloning-from-https-github-com-KingComolor-Comolor-POS--1750159215046_1750159215051.txt
docs/: beginner_friendly_summary.md  database-guide.md  database_deployment_guide.md  database_quick_start_checklist.md  dependencies-guide.md  deployment-render-guide.md  desktop_app_packaging_guide.md  developer-guide.md  development_setup_guide.md  mpesa-guide.md  mpesa_integration_guide.md  mpesa_production_setup_guide.md  mpesa_quick_reference.md  multi_tenant_database_guide.md  quick_start_checklist.md  real-world-deployment-guide.md  render.yaml  render_deployment_guide.md  render_postgresql_setup_guide.md  (+5 more)
(+53 files in other folders)
