[tool.poetry]
name = "comolor-pos"
version = "0.1.0"
description = "Multi-tenant POS system for Kenyan supermarkets"
authors = ["Comolor <comolor07@gmail.com>"]
package = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
email-validator = ">=2.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.1"
flask-sqlalchemy = ">=3.0.0,<4.0.0"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
sqlalchemy = ">=2.0.41"
werkzeug = ">=3.1.3"
reportlab = ">=4.4.1"
requests = ">=2.32.4"
